<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paleta_2"
    tools:context=".pagina2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/siluetapersonas" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/amaranth"
        android:text="@string/BtnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="396dp"
        android:layout_height="229dp"
        android:rotation="91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        app:srcCompat="@drawable/imagen" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:inputType="textPersonName"
        android:text="@string/EtvContrasena"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:inputType="textPersonName"
        android:text="@string/EtvNomUsuario"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:inputType="textPersonName"
        android:text="@string/EtvEmail"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:inputType="textPersonName"
        android:text="@string/EtvPrimNombre"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/BtnTerminosYCon"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="103dp"
        android:layout_height="109dp"
        android:layout_marginStart="308dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imagen2" />

</androidx.constraintlayout.widget.ConstraintLayout>