<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paleta3"
    tools:context=".pagina3">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="131dp"
        android:layout_height="115dp"
        android:layout_marginStart="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/imagen2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="131dp"
        android:layout_height="115dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        app:srcCompat="@drawable/imagen2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="131dp"
        android:layout_height="115dp"
        android:layout_marginStart="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imagen2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="184dp"
        android:layout_height="148dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/candado"
        tools:layout_editor_absoluteY="64dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:fontFamily="@font/boogaloo"
        android:inputType="textPersonName"
        android:text="@string/EtvNuevaCon"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:fontFamily="@font/boogaloo"
        android:inputType="textPersonName"
        android:text="@string/EtvConfirmCon"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/amaranth"
        android:text="@string/BtnRestablecer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded_border"
        android:fontFamily="@font/amaranth"
        android:text="@string/BtnVolver"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtResContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

</androidx.constraintlayout.widget.ConstraintLayout>