<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paleta_2"
    tools:context=".pagina4">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginBottom="616dp"
        android:text="@string/Txtsubtitulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVETEMOVIL"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginEnd="288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imagen2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginBottom="628dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagen2" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_marginStart="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen2" />

    <TextView
        android:id="@+id/tvVETEMOVIL2"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:fontFamily="cursive"
        android:text="@string/Txttitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="156dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        android:background=""
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/imagenDocumentos"
        android:contentDescription="Boton para ir a las citas programadas"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="155dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:background=""
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/imagenClinic"
        android:contentDescription="Boton para ir a las clinicas veterinarias de la plataforma"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="143dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:background=""
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/imagenPersona"
        android:contentDescription="Boton para ir a al perfil de la persona"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/TxtCitas"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/TxtVeterinaria"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/TxtPerfil"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>